<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginPage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:hint="@string/username_or_email"
        android:inputType="text"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/one_side_round"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotpasswordBtn"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="14dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#D86363"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotpasswordBtn"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="80dp"
        android:importantForAutofill="no"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/login_google_Btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgotpasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:paddingTop="6dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_google_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_google_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/black"
        android:padding="13sp"
        android:text="@string/log_in_with_google"
        android:textStyle="bold"
        app:icon="@drawable/googleicon"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="49dp" />


    <ImageView
        android:id="@+id/login_Btn"
        android:layout_width="77dp"
        android:layout_height="53dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/login_btn_corner"
        android:contentDescription="@string/login"
        android:src="@drawable/login_arrow"
        app:layout_constraintBottom_toTopOf="@+id/forgotpasswordBtn"
        app:layout_constraintStart_toEndOf="@+id/password_input" />


</androidx.constraintlayout.widget.ConstraintLayout>