<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#FF6060"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="27dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="94dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordEmailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Enter your email"
            android:layout_marginBottom="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forgotPasswordSubmit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="Submit"
        android:backgroundTint="#FF6060"
        android:layout_gravity="center"
        />

</LinearLayout>