<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.SignUpActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
        app:srcCompat="@drawable/signup_page_image" />


    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/signup_custom_edit_text"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:hint="Full name" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/signup_custom_edit_text"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:hint="Valid email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/signup_custom_edit_text"
        android:drawableStart="@drawable/baseline_phone_android_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:hint="Phone number"
        android:inputType="phone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/signup_custom_edit_text"
            android:drawableStart="@drawable/sharp_key_24"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/passwordToggle"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_eye_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordEditText"
            android:layout_width="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/signup_custom_edit_text"
            android:drawableStart="@drawable/sharp_key_24"
            android:drawablePadding="10dp"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/confirmPasswordToggle"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_eye_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confirmPasswordEditText"
            android:layout_width="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="By checking the box you agree to our"
            android:textColor="#193560"
            android:textSize="9sp"
            />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:text=" Terms and Conditions."
            android:textColor="#FF3951"
            android:textSize="9sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupCustBtn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:layout_marginTop="80dp"
       >

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/buttonIcon"
            android:layout_width="24dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/baseline_navigate_next_24"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Already a member?"
            android:textColor="#193560" />

        <TextView
            android:id="@+id/backLoginView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text=" Log in"
            android:textColor="#FF3951" />
    </LinearLayout>




</LinearLayout>
